# magik

./: .gitignore  Cargo.toml  README.md  RESEARCH.md  rust-toolchain.toml  technical-spec.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
machineplane/: Cargo.toml  Dockerfile  build.rs  machineplane-spec.md
machineplane/src/: api.rs  lib.rs  main.rs  messages.rs  network.rs  podservice.rs  runtime.rs  scheduler.rs
machineplane/src/runtimes/: crun.rs  krun.rs  mod.rs
machineplane/tests/: apply_common.rs  apply_tests.rs  cli_tests.rs  manifest_tests.rs  mesh_tests.rs  runtime_helpers.rs  runtime_tests.rs  scheduler_tests.rs  test-spec.md  test_utils.rs
workplane/: Cargo.toml  workplane-spec.md
workplane/src/: agent.rs  config.rs  discovery.rs  lib.rs  main.rs  metrics.rs  network.rs  raft.rs  rpc.rs  selfheal.rs  supervisor.rs
workplane/tests/: discovery_tests.rs  selfheal_tests.rs
