[workspace]
resolver = "2"
members = [
    "machineplane",
    "workplane",
]

[workspace.dependencies]
blake3 = "1.5"
korium = "0.1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
env_logger = "0.10"
log = "0.4"
base64 = "0.21"
anyhow = "1.0"
futures = "0.3"
dirs = "4.0"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
