[package]
name = "machineplane"
version = "0.1.0"
edition = "2024"
description = "Magik machineplane daemon"
build = "build.rs"

[features]
# Automatically enabled by build.rs when workplane binary is available
embedded-workplane = []
# libkrun microVM support (requires libkrun system library)
runtime-krun = ["dep:krun-sys"]

[dependencies]
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
korium = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["env"] }
uuid = { workspace = true }
base64 = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
env_logger = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
reqwest = { workspace = true }
zeroize = "1.5"
indexmap = "2.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
paste = "1.0"
libc = "0.2"

# OCI image handling
oci-distribution = "0.11"
flate2 = "1.0"
tar = "0.4"

# libkrun microVM support (Linux KVM / macOS HVF) - optional
krun-sys = { version = "1.10", optional = true }

# libcrun container support (stubs on non-Linux platforms)
crun-sys = "0.1.1"

[dev-dependencies]
serial_test = "3.0"
dirs = { workspace = true }
# Use test-pow for faster mesh formation in tests (8-bit vs 24-bit difficulty)
korium = { version = "0.1.0", features = ["test-pow"] }
