[package]
name = "workplane"
version = "0.1.0"
edition = "2024"
description = "Magik workplane infra container"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true, features = ["env"] }
korium = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
libc = "0.2"

[dev-dependencies]
# Use test-pow for faster mesh formation in tests (8-bit vs 24-bit difficulty)
korium = { version = "0.1.0", features = ["test-pow"] }
